...
                                addServerState.value = LoadingState.Success
                                navigationManager.navigateTo(SetupDestination.UserList(server))
                            }
                        } else {
                            withContext(Dispatchers.Main) {
                                addServerState.value =
                                    LoadingState.Error("Server returned invalid response")
                            }
                        }
                    } else {
                        Timber.w("Error connecting with %s: %s", inputUrl, scores)
                        // No good server candidate
                        val errors =
...
