...
                            keyboardActions =
                                KeyboardActions(
                                    onGo = { submit.invoke() },
                                ),
                            modifier =
                                Modifier
                                    .testTag("server_url_text")
                                    .focusRequester(textBoxFocusRequester)
                                    .fillMaxWidth(),
                        )
                        when (val st = state) {
                            is LoadingState.Error -> {
                                Text(
...
